<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_notification_channel_id">69</string>
    <string name="notification_channel">Download</string>

    <string name="glide_download">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity_download">ND940C3-Project - Current repository by Udacity</string>
    <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="title">title</string>
    <string name="success">Success</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="fail">Fail</string>
    <string name="error_message_select_project">Please select one project to download</string>
</resources>
